--- a/Pokemons-App/src/pages/Home/styles.module.scss
+++ b/Pokemons-App/src/pages/Home/styles.module.scss
@@ -1,6 +1,6 @@
 .home {
   max-width: 100vw;
-  min-height: 100vw;
+  min-height: 100vh;
   background-color: #f7f7f7;
 
   header {
@@ -10,25 +10,25 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-  }
 
-  div {
-    width: fit-content;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: centers;
-    gap: 1rem;
-  }
+    div {
+      width: fit-content;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+    }
 
-  span {
-    color: #212121;
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: 700px;
-  }
+    span {
+      color: #212121;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 700;
+    }
 
-  svg {
-    width: 24px;
+    svg {
+      width: 24px;
+    }
   }
 }
